--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h2>Ausum Group</h2>
+                    <a href="index.html">
+                        <h2>Ausum Group</h2>
+                    </a>
                 </div>
                 <div class="nav-toggle" id="navToggle">
                     <span></span>
@@ -27,9 +29,12 @@
                     <span></span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="/invest.html" class="nav-link">Invest</a></li>
-                    <li><a href="/contact.html" class="nav-link">Contact</a></li>
+                    <li><a href="nexus.html" class="nav-link">Nexus</a></li>
+                    <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+                    <li><a href="studios.html" class="nav-link">Studios</a></li>
+                    <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+                    <li><a href="invest.html" class="nav-link">Invest</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
