--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div class="container">
       <nav class="navbar">
         <div class="logo">
-          <h2>Ausum Group</h2>
+          <a href="index.html">
+            <h2>Ausum Group</h2>
+          </a>
         </div>
         <div class="nav-toggle" id="navToggle">
           <span></span>
@@ -28,13 +30,13 @@
           <span></span>
         </div>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="#hero" class="nav-link">Home</a></li>
-          <li><a href="#about" class="nav-link">Vision</a></li>
-          <li><a href="#mission" class="nav-link">Mission</a></li>
-          <li><a href="#ecosystem" class="nav-link">Ecosystem</a></li>
-          <li><a href="#traction" class="nav-link">Traction</a></li>
-          <li><a href="#invest" class="nav-link">Invest</a></li>
-          <li><a href="/contact.html" class="nav-link">Contact</a></li>
+          <li><a href="nexus.html" class="nav-link">Nexus</a></li>
+          <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+          <li><a href="studios.html" class="nav-link">Studios</a></li>
+          <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+          <li><a href="invest.html" class="nav-link">Invest</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
         </ul>
       </nav>
     </div>
@@ -71,8 +73,7 @@
             </blockquote>
           </div>
           <div class="about-image">
-            <img
-              src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            <img src="/male-employee-getting-used-his-new-office-job-along-with-female-colleagues.jpg"
               alt="Team collaboration" class="img-responsive">
           </div>
         </div>
@@ -91,8 +92,7 @@
         </div>
         <div class="mission-content">
           <div class="mission-image">
-            <img
-              src="https://images.pexels.com/photos/3182812/pexels-photo-3182812.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            <img src="/male-employee-getting-used-his-new-office-job-along-with-female-colleagues (1).jpg"
               alt="Vision and planning" class="img-responsive">
           </div>
           <div class="mission-text">
@@ -126,7 +126,7 @@
             <ul>
               <li>Eyewear with purpose and personality</li>
               <li>Curated with intention, chosen for quality</li>
-              <li>Reimagining eyewear retial in Africa</li>
+              <li>Reimagining eyewear retail in Africa</li>
             </ul>
             <div class="pillar-overlay">
               <p>A premium eyewear and lifestyle brand inspiring confidence, self-expression and intentional living.
@@ -260,7 +260,8 @@
         </div>
         <div class="mission-content">
           <div class="mission-image">
-            <img src="https://images.pexels.com/photos/590011/pexels-photo-590011.jpeg?auto=compress&cs=tinysrgb&w=600"
+            <img
+              src="/gold-growing-arrow-with-gold-coin-money-stacks-gold-bar-business-finance-savings-investment-concept-background-3d-illustration.jpg"
               alt="Vision and planning" class="img-responsive">
           </div>
           <div class="mission-text">
