--- a/studios.html
+++ b/studios.html
@@ -19,7 +19,9 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h2>Ausum Group</h2>
+                    <a href="index.html">
+                        <h2>Ausum Group</h2>
+                    </a>
                 </div>
                 <div class="nav-toggle" id="navToggle">
                     <span></span>
@@ -27,9 +29,12 @@
                     <span></span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#overview" class="nav-link">Vision</a></li>
-                    <li><a href="#offerings" class="nav-link">Model</a></li>
+                    <li><a href="nexus.html" class="nav-link">Nexus</a></li>
+                    <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+                    <li><a href="studios.html" class="nav-link active">Studios</a></li>
+                    <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+                    <li><a href="invest.html" class="nav-link">Invest</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,7 +43,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero" id="hero"
-            style="background-image: url('https://images.pexels.com/photos/2608517/pexels-photo-2608517.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');">
+            style="background-image: url('https://images.unsplash.com/photo-1682617367564-2280bba8d54f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fEFmcmljYW4lMjBtZWRpYSUyMGhvdXNlfGVufDB8fDB8fHww');">
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
@@ -62,7 +67,7 @@
                             delivers world-class media solutions for businesses ready to stand out</p>
                     </div>
                     <div class="about-image">
-                        <img src="https://images.pexels.com/photos/2608516/pexels-photo-2608516.jpeg"
+                        <img src="https://images.unsplash.com/photo-1641077818079-bddd919402bf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTQ5fHxBZnJpY2FuJTIwbWVkaWElMjByb29tfGVufDB8fDB8fHww"
                             alt="Creative content production" class="img-responsive">
                     </div>
                 </div>
