fixed spelling errors

--- a/about.html
+++ b/about.html
@@ -170,8 +170,7 @@
                             choose purpose over prestige. What followed was a decade-long stretch of grit: shopkeeper,
                             service station manager, bakery runner, mall operator, sales rep, makeshift accountant. Job
                             after job. Hustle after hustle. Not glamorous, but deeply human. Every step shaping a
-                            builder.
-                            .</p>
+                            builder.</p>
                         <p>The turning point came in the eyewear industry, where in four years, Dennis rose from
                             merchandiser to executive account manager at a global company. That chapter revealed a
                             deeper truth: <strong> corporate path isn’t always the calling-especially when your soul
@@ -181,7 +180,7 @@
                         <p><strong>Ausum Group</strong> was born from that tension. From lived frustration. From knowing
                             the weight of
                             having more vision than capital, more ideas than opportunities. But still choosing to
-                            believe. Built on faith, resilience, and relentless clarity, Ausum exists to prove that
+                            believe. Built on faith, resilience, and relentless clarity, Ausum Group exists to prove that
                             Africa doesn’t lack talent—it lacks belief, backing, and structures that let builders
                             thrive.
                         </p>
