--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               design with purposeful focus through high-Impact brands in enterprise, media, beauty and fashion. We
               empower a generation to live with intention, elegance and purpose.</p>
             <blockquote class="quote">
-              <p>"Until the Lions have thier own historians, the history of the hunt will always glorify the hunter"</p>
+              <p>"Until the Lions have their own historians, the history of the hunt will always glorify the hunter"</p>
               <cite>— Chinua Achebe</cite>
             </blockquote>
           </div>
@@ -97,7 +97,7 @@
           </div>
           <div class="mission-text">
             <h3>Turning Ideas into Impact</h3>
-            <p>We turn bold ideas into imapct by providing foundational structures whereby sustainable solutions thrive.
+            <p>We turn bold ideas into impact by providing foundational structures whereby sustainable solutions thrive.
               At Ausum Group, we are cultivating a vibrant community of builders and problem solvers-fueling
               entrepreneurship and championing the next generation of African leaders.</p>
             <ul class="mission-list">
@@ -195,11 +195,11 @@
             <ul class="traction-list">
               <li>
                 <span class="traction-highlight">Ksh 1,036,000</span>
-                <p>Eyewear revenue generated in just 8 months</p>
+                <p>Revenue generated from 8 months of wholesale eyewear sales</p>
               </li>
               <li>
                 <span class="traction-highlight">Key Partnerships</span>
-                <p>Brand Development Expert, Certified Financial Ananylst, Videographer & Editor, Developer, China
+                <p>Brand Development Expert, Chartered Financial Analyst, Videographer & Editor, Developer, China
                   sourcing network</p>
               </li>
               <li>
@@ -216,7 +216,7 @@
                   <h4>2024 H2</h4>
                   <p>- Established Ausum Nexus</p>
                   <p>- Client Onboarding</p>
-                  <p>- Pleminary sales with whole sale model</p>
+                  <p>- Preliminary sales through wholesale model</p>
                 </div>
               </div>
               <div class="milestone">
@@ -224,7 +224,7 @@
                 <div class="milestone-content">
                   <h4>2025 H1</h4>
                   <p>- Established our vision with measurable progress</p>
-                  <p>- Set the stage for strategic patnership and funding</p>
+                  <p>- Set the stage for strategic partnership and funding</p>
                 </div>
               </div>
               <div class="milestone">
