made changes in the invest page

--- a/appeals.html
+++ b/appeals.html
@@ -134,6 +134,16 @@
             </div>
         </section>
 
+        <section id="eyewear-stand-display">
+            <div class="section-header">
+                <h2 class="section-title">Our Signature Eyewear Display</h2>
+                <div class="accent-line"></div>
+            </div>
+            <div class="eyewear-stand-img-container">
+                <img src="/ausum-appeals-stand.jpg" alt="ausum appeals eyewear stand">
+            </div>
+        </section>
+
         <!-- Call to Action Section -->
         <section class="cta section" id="contact">
             <div class="container">
