--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
       <div class="hero-overlay"></div>
       <div class="container">
         <div class="hero-content">
-          <h1 class="hero-title">The Ausum Life</h1>
-          <p class="hero-subtitle">Building a lifestyle ecosystem where culture meets commerce-blending African
-            authenticity with modern design, digital influence and scalable business models.</p>
+          <h2 class="hero-title">A Zebra Company-Where Profit Meets Purpose</h2>
+          <p class="hero-subtitle">Building A Self-Sustaining Entrepreneurial Ecosystem.</p>
         </div>
       </div>
     </section>
@@ -64,12 +63,13 @@
         </div>
         <div class="about-content">
           <div class="about-text">
-            <p class="about-intro">Ausum Group is building a bold, modern lifestyle ecosystem driven by intelligent
-              design with purposeful focus through high-Impact brands in enterprise, media, beauty and fashion. We
-              empower a generation to live with intention, elegance and purpose.</p>
+            <p class="about-intro">We are building a purpose-driven ecosystem that turns entrepreneurship into a force
+              for solving unemployment in Kenya — by hiring skilled talent, launching high-impact brands, and
+              empowering founders through our Hub.</p>
             <blockquote class="quote">
-              <p>"Until the Lions have their own historians, the history of the hunt will always glorify the hunter"</p>
-              <cite>— Chinua Achebe</cite>
+              <p>"Africa will rise not on the strength of one lion, but through the unity of builders—creators,
+                founders, artisans, and dreamers—who choose collaboration over competition, purpose over pride, and
+                impact over ego. It is in the hands of many, not the roar of one, that a continent is transformed."</p>
             </blockquote>
           </div>
           <div class="about-image">
@@ -97,14 +97,19 @@
           </div>
           <div class="mission-text">
             <h3>Turning Ideas into Impact</h3>
-            <p>We turn bold ideas into impact by providing foundational structures whereby sustainable solutions thrive.
-              At Ausum Group, we are cultivating a vibrant community of builders and problem solvers-fueling
-              entrepreneurship and championing the next generation of African leaders.</p>
+            <p>Our mission is to create opportunities in Kenya by launching high-impact ventures and
+              equipping the next generation of founders.
+              Through Ausum Group’s growing portfolio in fashion, beauty, media, and enterprise, and our Nexus Hub
+              accelerator, we hire skilled professionals, support creative entrepreneurs, and develop practical business
+              solutions that respond to real market needs.</p>
+
+              <p>We achieve this by:</p>
             <ul class="mission-list">
-              <li>Creating authentic brands with global appeal</li>
-              <li>Developing scalable business frameworks</li>
-              <li>Producing inspirational content that shifts narratives</li>
-              <li>Implementing practical local solutions to everyday challenges</li>
+              <li>Building authentic, scalable brands that generate employment across multiple sectors.</li>
+              <li>Hiring and consulting skilled talent to address job mismatch and underemployment.</li>
+              <li>Running Nexus Hub, a platform that trains, mentors, and funds purpose-driven founders.</li>
+              <li>Creating systems and content that shift mindsets, inspire innovation, and promote African excellence.
+              </li>
             </ul>
           </div>
         </div>
@@ -279,7 +284,7 @@
     <section class="benefits section" id="benefits">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">The Ausum Life Philosophy</h2>
+          <h2 class="section-title">The Ausum Principles</h2>
           <div class="accent-line"></div>
         </div>
         <div class="benefits-content">
