--- a/invest.html
+++ b/invest.html
@@ -55,52 +55,104 @@
         <section class="section bg-light" id="funding-roadmap">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Our Funding Phases</h2>
-                    <p class="section-subtitle">Our funding strategy is phased and milestone-based—designed to reduce
-                        risk and
-                        maximize investor value.</p>
+                    <h2 class="section-title">Our Funding Approach</h2>
+                    <p class="section-subtitle">We’re raising a focused round to activate the Ausum Group
+                        ecosystem—strategic capital that unlocks execution, validates our model, and positions us for
+                        scalable growth.</p>
                     <div class="accent-line"></div>
                 </div>
                 <div class="funding-phases">
                     <div class="funding-phase current">
                         <div class="phase-number seed">
                             <div class="phase-number-text">Seed</div>
-                            <div class="phase-amount-shape">$35,000</div>
+                            <div class="phase-amount-shape">KES 2M</div>
                         </div>
-                        <div class="phase-header">
-                            <h3>Now: Seed Round</h3>
-                        </div>
-                        <div class="phase-timeline">
-                            <strong>Timeframe:</strong> June 2025 – December 2026<br>
-                            <strong>Purpose:</strong> Prove concept & validate profitability across 3 pillars
+                        <div class="phase-content">
+                            <h2>Why invest</h2>
+                            <ul class="phase-list">
+                                <li><strong>Early Access to a Big Vision:
+                                    </strong>Get in at founder-stage valuations<br> before the full brand ecosystem
+                                    scales.
+                                </li>
+                                <li><strong>Smart Retail, Exponential Reach:
+                                    </strong>Our QR-powered displays turn retail<br> shelves into digital gateways —
+                                    driving
+                                    low-cost, high-retention growth.
+                                </li>
+                                <li><strong>Purpose Beyond Profit:
+                                    </strong>We’re tackling youth unemployment by building brands and funding founders.
+                                </li>
+                                <li><strong>Fuel the Flywheel:
+                                    </strong>Your investment helps Ausum Appeals reach KES 400K MRR.
+                                </li>
+                            </ul>
                         </div>
                         <div class="phase-content">
                             <h4>Use of Funds:</h4>
                             <ul class="phase-list">
-                                <li>Ausum Appeals: Launch product line, validate retail + wholesale model
+                                <li>Deploy branded display units (with QR codes) in high-footfall supermarkets,
+                                    pharmacies<br> & convenience stores
                                 </li>
-                                <li>Ausum Studios: Build content engine (Just Ausum podcast, social media series)
+                                <li>Launch and optimize the Ausum Appeals e-commerce experience
                                 </li>
-                                <li>Nexus Hub: Pilot 1:1 consulting, create MVP of SME toolkit
+                                <li>
+                                    Package design & POS materials to elevate shelf appeal
                                 </li>
                             </ul>
                             <div class="phase-why">
-                                <h4>Targets:</h4>
-                                <p>Angel investors, startup mentors, purpose-aligned professionals
+                                <h4>Milestone and Timeline</h4>
+                                <p><strong>Q4 2025: </strong>Raise KES 2M and deploy Ausum Appeals in 50+ retail outlets
                                 </p>
-                            </div>
-                            <div class="phase-why">
-                                <h4>Milestone:</h4>
-                                <p>Break even on 1 venture, and establish audience & service traction for 2 others
+                                <p><strong>Q1 2026: </strong>Hit KES 400K Monthly Recurring Revenue (MRR)
                                 </p>
+                                <p><strong>Q2 2026: </strong>Activate flywheel elements (logistics, content, new brand
+                                    dev)</p>
+                                <p><strong>Q3 2026: </strong>Convertible Notes convert into equity (~10%)</p>
+                                <p><strong>Q3 2027: </strong>Guarantee: 1.5x capital return if conversion hasn’t
+                                    occurred</p>
                             </div>
-                            <div class="phase-cta">
-                                <a href="#contact" class="btn btn-primary">Join the Seed Round</a>
+                            <div>
+                                <h4>Your Investment Options</h4>
+                                <div style="overflow-x:auto;">
+                                    <table style="width:100%; border-collapse: collapse; text-align: left;">
+                                        <thead style="background-color: #f4f4f4;">
+                                            <tr>
+                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Option</th>
+                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Return Type
+                                                </th>
+                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Timeline</th>
+                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Protection
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Convertible
+                                                    Note</td>
+                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Converts to
+                                                    equity at a
+                                                    20% discount,<br>estimated ~10% equity</td>
+                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Converts Q3
+                                                    2026</td>
+                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Guaranteed
+                                                    1.5x capital
+                                                    return by Q3 2027</td>
+                                            </tr>
+                                            <tr>
+                                                <td style="padding: 10px;">Revenue Share</td>
+                                                <td style="padding: 10px;">Earn up to 2x capital from monthly revenue
+                                                </td>
+                                                <td style="padding: 10px;">Payouts from M2 - M32</td>
+                                                <td style="padding: 10px;">Early cash flow, no equity tied up</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="funding-phase future">
+                    <!-- <div class="funding-phase future">
                         <div class="phase-number series-a">
                             <div class="phase-number-text">Series A</div>
                             <div class="phase-amount-shape">$100,000</div>
@@ -169,14 +221,45 @@
                                     enterprise brand platform</p>
                             </div>
                         </div>
+                    </div> -->
+                </div>
+        </section>
+        <!-- Investor Benefits Section -->
+        <section class="section" id="benefits">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Investor Benefits</h2>
+                    <div class="accent-line"></div>
+                </div>
+                <div class="benefits-content">
+                    <div class="benefit-card">
+                        <div class="benefit-icon" data-icon="discount"></div>
+                        <h3>Access</h3>
+                        <p>Priority updates on growth, brand launches, and key decisions</p>
+                    </div>
+                    <div class="benefit-card">
+                        <div class="benefit-icon" data-icon="access"></div>
+                        <h3>Co-Invest</h3>
+                        <p>First look at startups backed by the Nexus Hub.</p>
+                    </div>
+                    <div class="benefit-card">
+                        <div class="benefit-icon" data-icon="recognition"></div>
+                        <h3>Liquidity</h3>
+                        <p>Eligible for buyback rounds starting 2027.</p>
+                    </div>
+                    <div class="benefit-card">
+                        <div class="benefit-icon" data-icon="priority"></div>
+                        <h3>Perks</h3>
+                        <p>Early access and favorable pricing on exclusive product drops.</p>
                     </div>
                 </div>
+            </div>
         </section>
         <!-- Call to Action Section -->
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Join the Ascent</h2>
+                    <h2>Invest Now</h2>
                     <p>Let's build something Ausum—together.</p>
                     <div class="cta-buttons">
                         <a href="contact.html" class="btn btn-tertiary btn-large">Contact</a>
