--- a/nexus.html
+++ b/nexus.html
@@ -110,9 +110,9 @@
                         <ul class="ecosystem-features">
                             <li>We select promising businesses for hands-on incubation in exchange for equity (5%–15%
                                 depending on scope).</li>
-                            <li>Support includes strategy, capital access, branding, go-to-market, and tech integration.
+                            <li>Support includes Financial structure, Business strategy, Legal framework, Branding and Marketing, and  Tech integration.
                             </li>
-                            <li>Exit potential through future fundraising rounds, dividends, or acquisition.</li>
+                            <li>Through <strong>Ausum Fund</strong> - Access to capital</li>
                         </ul>
                     </div>
                     <div class="ecosystem-card">
@@ -122,6 +122,39 @@
                                 business transformation programs for MSMEs.</li>
                             <li>Revenue via service contracts or facilitation fees.</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Ecosystem Section -->
+        <section class="ecosystem section" id="ecosystem">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Businesses We Are Working With</h2>
+                    <!-- <p class="section-subtitle">The 4 Pillars of Ausum</p> -->
+                    <div class="accent-line"></div>
+                </div>
+                <div class="pillar-container">
+                    <div class="pillar-card">
+                        <div class="pillar-icon" data-icon="zane"><img src="/zane-beauty-logo.jpg"
+                                alt="zane beauty logo"></div>
+                        <h3>Zane Beauty</h3>
+                        <ul>
+                            <li>Offers beauty services-makeup, lash installation and more</li>
+                        </ul>
+                    </div>
+                    <div class="pillar-card">
+                        <div class="pillar-icon" data-icon="empty"></div>
+                        <h3 class="pillar-opacity">Your business could be here</h3>
+                    </div>
+                    <div class="pillar-card">
+                        <div class="pillar-icon" data-icon="empty"></div>
+                        <h3 class="pillar-opacity">Your business could be here</h3>
+                    </div>
+                    <div class="pillar-card">
+                        <div class="pillar-icon" data-icon="empty"></div>
+                        <h3 class="pillar-opacity">Your business could be here</h3>
                     </div>
                 </div>
             </div>
