added a ausum fund page

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <span></span>
         </div>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="nexus.html" class="nav-link">Nexus</a></li>
           <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+          <li><a href="nexus.html" class="nav-link">Nexus Hub</a></li>
           <li><a href="studios.html" class="nav-link">Studios</a></li>
-          <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+          <li><a href="fund.html" class="nav-link">Ausum Fund</a></li>
           <li><a href="invest.html" class="nav-link">Invest</a></li>
           <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
@@ -103,7 +103,7 @@
               accelerator, we hire skilled professionals, support creative entrepreneurs, and develop practical business
               solutions that respond to real market needs.</p>
 
-              <p>We achieve this by:</p>
+            <p>We achieve this by:</p>
             <ul class="mission-list">
               <li>Building authentic, scalable brands that generate employment across multiple sectors.</li>
               <li>Hiring and consulting skilled talent to address job mismatch and underemployment.</li>
@@ -167,17 +167,16 @@
               <button class="btn btn-secondary">Learn More</button>
             </div>
           </a>
-          <a href="just.html" class="pillar-card">
-            <div class="pillar-icon" data-icon="just"></div>
-            <h3>Just Ausum</h3>
+          <a href="fund.html" class="pillar-card">
+            <div class="pillar-icon" data-icon="fund"></div>
+            <h3>Ausum Fund</h3>
             <ul>
-              <li>Lifestyle with intention</li>
-              <li>Faith-led personal growth</li>
-              <li>Bold, honest story telling</li>
+              <li>We invest in early-stage African founders with bold, scalable ideas.</li>
+              <li>We turn ecosystem profits into ventures that create jobs and impact.</li>
             </ul>
             <div class="pillar-overlay">
-              <p>A dynamic personal brand exploring lifestyle, leadership, and legacy through storytelling and
-                self-expression.
+              <p>A profit-powered venture fund backing Africa’s boldest founders to build, grow, and
+                hire.
               </p>
               <button class="btn btn-secondary">Learn More</button>
             </div>
@@ -270,11 +269,15 @@
               alt="Vision and planning" class="img-responsive">
           </div>
           <div class="mission-text">
-            <p>Invest in Ausum Group
-              With growing traction, a scalable model, and a clear path to 10x revenue growth by 2026, this is your
-              chance to back a brand that’s redefining what it means to live, look, and lead the Ausum Life.
+            <p>At Ausum Group, we’re not just building brands — we’re building pathways. In a continent where millions
+              face unemployment not from a lack of talent, but a lack of opportunity, we see business as the most
+              scalable solution.
             </p>
-            <p>Your investment fuels more than returns-it powers transformation</p>
+            <p>Your capital isn’t just fuel for growth — it’s a vote for the future we all want to live in.
+              One where young people create, earn, and lead with dignity. One where local ideas compete globally. One
+              where impact and income walk hand in hand.
+            </p>
+            <p>This is bigger than us. And it starts with you. Invest in Ausum Group — and turn capital into change.</p>
             <a href="/invest.html" class="btn btn-tertiary">Explore Investment Opportunity</a>
           </div>
         </div>
@@ -316,8 +319,7 @@
     <section class="cta section" id="contact">
       <div class="container">
         <div class="cta-content">
-          <h2>This isn't just funding. It's fuel for a movement.</h2>
-          <p>Join us in building an African business ecosystem that inspires and empowers the next generation.</p>
+          <h2>Building A Self-Sustaining Entrepreneurial Ecosystem.</h2>
           <div class="cta-buttons">
             <a href="/contact.html" class="btn btn-secondary btn-large">Contact Us</a>
           </div>
