--- a/invest.html
+++ b/invest.html
@@ -29,10 +29,10 @@
                     <span></span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="nexus.html" class="nav-link">Nexus</a></li>
                     <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+                    <li><a href="nexus.html" class="nav-link">Nexus Hub</a></li>
                     <li><a href="studios.html" class="nav-link">Studios</a></li>
-                    <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+                    <li><a href="fund.html" class="nav-link">Ausum Fund</a></li>
                     <li><a href="invest.html" class="nav-link active">Invest</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
@@ -259,8 +259,7 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Invest Now</h2>
-                    <p>Let's build something Ausum—together.</p>
+                    <h2>Backing Builders, Breaking Barriers.</h2>
                     <div class="cta-buttons">
                         <a href="contact.html" class="btn btn-tertiary btn-large">Contact</a>
                     </div>
