--- a/nexus.html
+++ b/nexus.html
@@ -29,10 +29,10 @@
                     <span></span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="nexus.html" class="nav-link active">Nexus</a></li>
-                    <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+                    <li><a href="appeals.html" class="nav-link active">Appeals</a></li>
+                    <li><a href="nexus.html" class="nav-link">Nexus Hub</a></li>
                     <li><a href="studios.html" class="nav-link">Studios</a></li>
-                    <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+                    <li><a href="fund.html" class="nav-link">Ausum Fund</a></li>
                     <li><a href="invest.html" class="nav-link">Invest</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
@@ -164,7 +164,7 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Disrupting Normal, Designing Legacy</h2>
+                    <h2>Architecting Growth. Fueling Innovation.</h2>
                 </div>
             </div>
         </section>
