--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
                     <span></span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="nexus.html" class="nav-link">Nexus</a></li>
                     <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+                    <li><a href="nexus.html" class="nav-link">Nexus Hub</a></li>
                     <li><a href="studios.html" class="nav-link">Studios</a></li>
-                    <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+                    <li><a href="fund.html" class="nav-link">Ausum Fund</a></li>
                     <li><a href="invest.html" class="nav-link">Invest</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
