--- a/studios.html
+++ b/studios.html
@@ -29,10 +29,10 @@
                     <span></span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="nexus.html" class="nav-link">Nexus</a></li>
                     <li><a href="appeals.html" class="nav-link">Appeals</a></li>
+                    <li><a href="nexus.html" class="nav-link">Nexus Hub</a></li>
                     <li><a href="studios.html" class="nav-link active">Studios</a></li>
-                    <li><a href="just.html" class="nav-link">Just Ausum</a></li>
+                    <li><a href="fund.html" class="nav-link">Ausum Fund</a></li>
                     <li><a href="invest.html" class="nav-link">Invest</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
@@ -43,11 +43,11 @@
     <main>
         <!-- Hero Section -->
         <section class="hero" id="hero"
-            style="background-image: url('https://images.unsplash.com/photo-1682617367564-2280bba8d54f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fEFmcmljYW4lMjBtZWRpYSUyMGhvdXNlfGVufDB8fDB8fHww');">
+            style="background-image: url('https://images.unsplash.com/photo-1537044751776-d5fb12da424d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGRpZ2l0YWwlMjBtZWRpYXxlbnwwfHwwfHx8MA%3D%3D');">
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Where African Stories Power Strategy</h1>
+                    <h1 class="hero-title">Powering Strategy Through Story</h1>
                     <p class="hero-subtitle">Creative content that captures, converts, and connects.</p>
                 </div>
             </div>
@@ -145,8 +145,7 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>Create with Ausum Studios</h2>
-                    <p>Ready to bring your brand story to life? Let's create content that captures hearts and minds.</p>
+                    <h2>Powering Strategy Through Story</h2>
                 </div>
             </div>
         </section>
