made changes to invest page

--- a/invest.html
+++ b/invest.html
@@ -111,43 +111,12 @@
                                 <p><strong>Q3 2027: </strong>Guarantee: 1.5x capital return if conversion hasn’t
                                     occurred</p>
                             </div>
-                            <div>
-                                <h4>Your Investment Options</h4>
-                                <div style="overflow-x:auto;">
-                                    <table style="width:100%; border-collapse: collapse; text-align: left;">
-                                        <thead style="background-color: #f4f4f4;">
-                                            <tr>
-                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Option</th>
-                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Return Type
-                                                </th>
-                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Timeline</th>
-                                                <th style="padding: 10px; border-bottom: 2px solid #ddd;">Protection
-                                                </th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Convertible
-                                                    Note</td>
-                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Converts to
-                                                    equity at a
-                                                    20% discount,<br>estimated ~10% equity</td>
-                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Converts Q3
-                                                    2026</td>
-                                                <td style="padding: 10px; border-bottom: 1px solid #eee;">Guaranteed
-                                                    1.5x capital
-                                                    return by Q3 2027</td>
-                                            </tr>
-                                            <tr>
-                                                <td style="padding: 10px;">Revenue Share</td>
-                                                <td style="padding: 10px;">Earn up to 2x capital from monthly revenue
-                                                </td>
-                                                <td style="padding: 10px;">Payouts from M2 - M32</td>
-                                                <td style="padding: 10px;">Early cash flow, no equity tied up</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
+                            <div class="phase-why">
+                                <h4>The Offer</h4>
+                                <p>Put in KES 2M now, and get back KES 4M in just 32 months — paid to you in 8 smooth
+                                    instalments of KES 500,000. That’s double your money, without the headaches of
+                                    shares or risky lending. You start getting your cash back early, and it keeps coming
+                                    on schedule. It’s simple, safe, and way better than what banks or SACCOs offer</p>
                             </div>
                         </div>
                     </div>
@@ -245,7 +214,7 @@
                     <div class="benefit-card">
                         <div class="benefit-icon" data-icon="recognition"></div>
                         <h3>Liquidity</h3>
-                        <p>Eligible for buyback rounds starting 2027.</p>
+                        <p>Eligible for payout rounds starting 2025.</p>
                     </div>
                     <div class="benefit-card">
                         <div class="benefit-icon" data-icon="priority"></div>
