--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="hero-overlay"></div>
       <div class="container">
         <div class="hero-content">
-          <h2 class="hero-title">A Zebra Company-Where Profit Meets Purpose</h2>
+          <h2 class="hero-title">Belief Is The Seed, We Help It Grow.</h2>
           <p class="hero-subtitle">Building A Self-Sustaining Entrepreneurial Ecosystem.</p>
         </div>
       </div>
