made changes in the invest and nexus page

--- a/invest.html
+++ b/invest.html
@@ -101,15 +101,17 @@
                             </ul>
                             <div class="phase-why">
                                 <h4>Milestone and Timeline</h4>
-                                <p><strong>Q4 2025: </strong>Raise KES 2M and deploy Ausum Appeals in 50+ retail outlets
+                                <p><strong>Q3 2025: </strong>Raise KES 2M and deploy Ausum Appeals in 50+ retail outlets
                                 </p>
-                                <p><strong>Q1 2026: </strong>Hit KES 400K Monthly Recurring Revenue (MRR)
+                                <p><strong>Q4 2025: </strong>Hit KES 400K Monthly Recurring Revenue (MRR)
                                 </p>
-                                <p><strong>Q2 2026: </strong>Activate flywheel elements (logistics, content, new brand
-                                    dev)</p>
-                                <p><strong>Q3 2026: </strong>Convertible Notes convert into equity (~10%)</p>
-                                <p><strong>Q3 2027: </strong>Guarantee: 1.5x capital return if conversion hasn’t
-                                    occurred</p>
+                                <p><strong>Q4 2025: </strong>Payout First instalment.(500k)</p>
+                                <p><strong>Q1 2026: </strong>Activate Ecosystem</p>
+                                <p><strong>Q2 2026: </strong> Revenue Steady - Payout 2nd instalment (500k)
+                                </p>
+                                <p><strong>Q3 2026: </strong>Scale
+                                </p>
+                                <p><strong>Q2 2028: </strong>Payout Last Instalment (500k)</p>
                             </div>
                             <div class="phase-why">
                                 <h4>The Offer</h4>
