--- a/nexus.html
+++ b/nexus.html
@@ -110,7 +110,8 @@
                         <ul class="ecosystem-features">
                             <li>We select promising businesses for hands-on incubation in exchange for equity (5%–15%
                                 depending on scope).</li>
-                            <li>Support includes Financial structure, Business strategy, Legal framework, Branding and Marketing, and  Tech integration.
+                            <li>Support includes Financial structure, Business strategy, Legal framework, Branding and
+                                Marketing, and Tech integration.
                             </li>
                             <li>Through <strong>Ausum Fund</strong> - Access to capital</li>
                         </ul>
@@ -145,8 +146,12 @@
                         </ul>
                     </div>
                     <div class="pillar-card">
-                        <div class="pillar-icon" data-icon="empty"></div>
-                        <h3 class="pillar-opacity">Your business could be here</h3>
+                        <div class="pillar-icon" data-icon="zane"><img src="/ayam-express-logo.jpg"
+                                alt="ayam express logo"></div>
+                        <h3>Ayam Express</h3>
+                        <ul>
+                            <li>Offers last mile delivery services</li>
+                        </ul>
                     </div>
                     <div class="pillar-card">
                         <div class="pillar-icon" data-icon="empty"></div>
